# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import storageRouter from "./storage";
+import recordingsRouter from "./recordings";
+import userRouter from "./user";
+import shareRouter from "./share";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(storageRouter);
+router.use(recordingsRouter);
+router.use(userRouter);
+router.use(shareRouter);
 
 export default router;
